styler UI changes

--- a/styler.html
+++ b/styler.html
@@ -16,9 +16,11 @@
       padding: 0;
       height: 100%;
       font-family: 'Cormorant Garamond', serif;
+      overflow-x: hidden;
     }
     #root {
       height: 100%;
+      width: 100%;
     }
   </style>
 </head>
