--- a/styler.html
+++ b/styler.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
   
   <!-- Base styles that will be common across pages -->
+  <link rel="stylesheet" href="styler-page.css">
   <style>
     body, html {
       margin: 0;
